Fixing the bug of refresh and disappear fixed elements in firefox. Adding 'overflow: scroll;' in aside element.

--- a/aside-footer-styles.css
+++ b/aside-footer-styles.css
@@ -3,6 +3,9 @@
   height: 100%;
   float: right;
   clear: right;
+  overflow: auto;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 .aside-fixed{
