--- a/section-styles.css
+++ b/section-styles.css
@@ -6,6 +6,8 @@
   float: left;
 }
 
+
+/*///////////////////////////////////////////////////*/
 #dPai{
   margin-top: 30px;
   margin-right: 0px;
@@ -13,7 +15,6 @@
   padding: 0;
   /*border: 0px solid black;*/
 }
-
 h2{
   text-align: center;
   background-color: #717171;
@@ -22,7 +23,6 @@ h2{
   margin: 3% 0;
   text-shadow: 0 0 2px black;
 }
-
 #divs abbr div:nth-child(1){
   width: 28%;
   margin: 80px 0 150px 4%;
@@ -52,6 +52,8 @@ cite:after{
   text-transform: capitalize;
 }
 
+
+/*///////////////////////////////////////////////////*/
 #list-image{
   width: 40%;
   margin: 3% 3%;
@@ -64,6 +66,8 @@ ul#example-lists li:before{
   content: "Diga: ";
 }
 
+
+/*///////////////////////////////////////////////////*/
 #tab, #form{
   width: 100%;
   padding-top: 50px;
@@ -71,10 +75,14 @@ ul#example-lists li:before{
   float: left;
 }
 #tab{
-  background: linear-gradient(to bottom,  rgba(0, 0, 0, 0.0) 0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.5) 90%, rgba(0, 0, 0, 0.0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  background: -moz-linear-gradient(top,  rgba(0, 0, 0, 0.0) 0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.5) 90%, rgba(0, 0, 0, 0.0) 100%); /* FF3.6-15 */
-  /*background: -webkit-linear-gradient(top,  rgba(0, 0, 0, 0.0) 1%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.5) 90%, rgba(0, 0, 0, 0.0) 100%); /* Chrome10-25,Safari5.1-6 */ 
-  /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c8a484', endColorstr='#000000',GradientType=0 ); /*IE6-9*/ 
+   /*W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: linear-gradient(to bottom,  rgba(0, 0, 0, 0.0) 0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.5) 90%, rgba(0, 0, 0, 0.0) 100%);
+  /* FF3.6-15 */
+  background: -moz-linear-gradient(top,  rgba(0, 0, 0, 0.0) 0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.5) 90%, rgba(0, 0, 0, 0.0) 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: -webkit-linear-gradient(top,  rgba(0, 0, 0, 0.0) 1%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0.5) 90%, rgba(0, 0, 0, 0.0) 100%); 
+  /*IE6-9*/
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c8a484', endColorstr='#000000',GradientType=0 );
 }
 table{
   margin-left: auto;
@@ -98,6 +106,8 @@ th{
   border-radius: 5px 5px 0 0;
 }
 
+
+/*///////////////////////////////////////////////////*/
 .formulario{
   text-align: center;
 }
@@ -174,6 +184,9 @@ th{
   -webkit-appearance: none;
   -moz-appearance: none;
 }
+
+
+/*///////////////////////////////////////////////////*/
 #cubo>div{
   width: 100%;
   height: 800px;
